...
                                                <rect key="frame" x="44" y="0.0" width="308" height="34.5"/>
                                                <subviews>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mNJ-7Z-nwf" userLabel="abox">
                                                        <rect key="frame" x="0.0" y="0.0" width="308" height="34.5"/>
                                                        <accessibility key="accessibilityConfiguration" hint="abox" identifier="abox" label="abox">
...
                                                <rect key="frame" x="44" y="0.0" width="308" height="35"/>
                                                <subviews>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="QxD-dp-O0z" userLabel="bbox">
                                                        <rect key="frame" x="0.0" y="0.0" width="308" height="35"/>
                                                        <accessibility key="accessibilityConfiguration" hint="bbox" identifier="bbox" label="bbox">
...
                                                <rect key="frame" x="44" y="0.0" width="308" height="34.5"/>
                                                <subviews>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mSk-bh-dAc" userLabel="cbox">
                                                        <rect key="frame" x="0.0" y="0.0" width="308" height="34.5"/>
                                                        <accessibility key="accessibilityConfiguration" hint="cbox" identifier="cbox" label="cbox">
...
                                        <rect key="frame" x="0.0" y="263" width="352" height="69.5"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Dm-fG-Kyc" userLabel="Resolver">
                                                <rect key="frame" x="146.5" y="20" width="59" height="30"/>
                                                <accessibility key="accessibilityConfiguration" hint="Resolver" identifier="Resolver" label="Resolver">
...
                                                <rect key="frame" x="88" y="0.0" width="264" height="35"/>
                                                <subviews>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tze-QX-dpg" userLabel="raiz1box">
                                                        <rect key="frame" x="0.0" y="0.0" width="264" height="35"/>
                                                        <accessibility key="accessibilityConfiguration" hint="raiz1box" identifier="raiz1box" label="raiz1box">
...
                                                <rect key="frame" x="88" y="0.0" width="264" height="35"/>
                                                <subviews>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="h7q-dy-hKV" userLabel="raiz2box">
                                                        <rect key="frame" x="0.0" y="0.0" width="264" height="35"/>
                                                        <accessibility key="accessibilityConfiguration" hint="raiz2box" identifier="raiz2box" label="raiz2box">
...
